--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@
     --softTextColor: #626262;
 }
 
+.dark{
+    --bg: #0f1750;
+    --textColor: #ddd;
+    --softBg: #1f273a;
+    --softTextColor: #a6a6a6;
+}
+
 *{
     padding: 0;
     margin: 0;
