--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,3 +1,28 @@
-/* .container{
-    background: #ca1616;
-} */
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+}
+
+.social{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex: 1;
+}
+
+.logo{
+    font-weight: bold;
+    flex: 1;
+    text-align: center;
+    font-size: 26px;
+}
+
+.links{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex: 1;
+    font-size: 15px;
+}
